# sol-atlas

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml  docs_hooks.py  mkdocs.yml
.github/: TESTING.md  dependabot.yml
bot/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
contracts/: GuruToken.sol  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  COMMUNITY_PILLARS.md  FEATURES.md  GETTING_STARTED.md  INTEGRATIONS.md
docs_user/: architecture.md  components.md  getting-started.md  index.md  launcher-wizard.md  projects.md  requirements.md  webchatbot.md  whitepaper.md
engine/: .env.example  Dockerfile  PR_JWT_AUTH.md  README.md  pom.xml
external_workers/: Dockerfile  requirements.txt
flow_api/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  launch.sh  pyproject.toml  requirements.txt
flow_api/aioredis/: connection.py  exceptions.py
flow_api/camunda_client/: README.md  types_.py
flow_api/camunda_client/clients/: endpoints.py
flow_api/camunda_client/clients/engine/: client.py
flow_api/camunda_client/clients/engine/schemas/: __init__.py  body.py  query.py  response.py
flow_api/configs/: app_config.py
flow_api/flow_api/: BurningMemeBetABI.json  __init__.py  __main__.py  admin_routes.py  art_models.py  base_model.py  dependencies.py  exception_handlers.py  flow_models.py  models.py  providers.py  resources.py  settings.py  user_model.py  utils.py
flow_api/flow_api/rest_models/: api_rest_models.py  art_rest_models.py  camunda_rest_models.py  flow_rest_models.py
flow_api/flow_api/routes/: api_routes.py  camunda_routes.py  seasons_routes.py  token_info_routes.py  warehouse_proxy.py
flow_api/flow_api/templates/providers/login/: register.html
flow_api/migrations/: env.py
flow_api/migrations/versions/: 2024-05-27_init_db.py  2024-05-28_add_chain_id_column_in_invites.py  2024-05-29_add_nft_metadata_table.py  2024-06-01_invites_add_column_is_updated_merkle_.py  2024-06-04_add_flows.py  2024-06-10_add_likes_table.py  2024-06-28_add_key_column_to_flow_table.py  2024-07-07_add_tags_to_arts.py  2024-08-01_extend_user_model.py  2024-08-15_add_delete_user_cascade_for_art.py  2024-08-15_add_reward_in_flow.py  2024-08-25_add_token_address_in_nft_metadata.py  2024-08-25_extend_art_table_with_symbol.py  2024-10-01_add_discord_user_id.py  2024-10-22_adding_address_and_parent_id_to_.py
flow_api/migrations/versions/old_migration/: 2024-03-30_adding_art_and_event_fixes.py  2024-04-07_changin_user_model.py  2024-04-08_changin_user_model.py  2024-04-14_initial_db_setup.py
flow_api/services/: camunda_service.py
frontend/: .env.sample  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  (+9 more)
(+1756 files in other folders)
