[tool.poetry]
name = "telegram-bot-template"
version = "2.2.0"
description = "Best way to create a scalable telegram bot with analytics"
homepage = "https://github.com/donBarbos/telegram-bot-template"
repository = "https://github.com/donBarbos/telegram-bot-template"
authors = ["donBarbos <donbarbos@proton.me>"]
license = "LGPL-v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
pydantic = "*"
pydantic-settings = "*"
greenlet = "^3.0.3"
httpx = "^0.27.0"
boto3 = "^1.34.73"
pillow = "^10.3.0"
pyzbar = "^0.1.9"
qrcode = "^7.4.2"
sqlalchemy-utils = "^0.41.2"
geoalchemy2 = "^0.15.0"
asyncpg = "^0.29.0"
fastapi = "0.109.2"
redis = "^5.0.3"
uvloop = "^0.19.0"
#async-fastapi-jwt-auth = {git = "ssh://git@github.com/sijokun/async-fastapi-jwt-auth.git"}
PyJWT = ">=2.8.0"
cryptography = ">=42.0.5"

uvicorn = "^0.29.0"
fastapi-admin = "^1.0.4"
aiogram = "*"
loguru = "^0.7.2"
sentry-sdk = {extras = ["loguru"], version = "^1.43.0"}
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
babel = "^2.13.1"
cachetools = "^5.3.2"
orjson = "^3.9.12"
alembic = "^1.13.1"
prometheus-client = "^0.20.0"
requests = "^2.31.0"
aiocache = {extras = ["redis"], version = "^0.12.2"}
elastic-apm = "6.22.2"
beautifulsoup4 = "^4.12.3"
web3 = "6.17.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.7.1"
pre-commit = "^3.7.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "ANN401", "TD003", "FIX002", "COM812", "ISC001", "FBT001", "FBT002", "RUF", "ERA", "ARG005"]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["logs", "configs", "migrations"]

[tool.ruff.isort]
no-lines-before = ["future", "standard-library"]
known-local-folder = ["bot", "admin"]

[tool.ruff.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.mypy]
python_version = "3.10"
files = "bot/*.py"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
